https://bugs.webkit.org/show_bug.cgi?id=30318 ScriptExecutionContext is not anymore needed to create an EventListener - remove old code. It's a followup to r48884. It removed the need to pass the ScritpExecutionContext into EventListener constructor but did not remove the code pulling ScriptExecutionContext.

Reviewed by Alexey Proskuryakov.

WebCore:

Tests:
Test adds event listener to a DocumentType Node which is created without a document
and then dispatches the event after attaching a node to the tree. Event
should fire when node is attached to the tree.

* fast/events/add-event-without-document-expected.txt: Added.
* fast/events/add-event-without-document.html: Added.

All changes in files below are the same - remove the code that calls
EventTarget::scriptExecutionContext and checks it for NULL.

* bindings/js/JSAbstractWorkerCustom.cpp:
(WebCore::JSAbstractWorker::addEventListener):
(WebCore::JSAbstractWorker::removeEventListener):
* bindings/js/JSDOMApplicationCacheCustom.cpp:
(WebCore::JSDOMApplicationCache::addEventListener):
(WebCore::JSDOMApplicationCache::removeEventListener):
* bindings/js/JSDesktopNotificationsCustom.cpp:
(WebCore::JSNotification::addEventListener):
(WebCore::):
* bindings/js/JSEventSourceCustom.cpp:
(WebCore::JSEventSource::addEventListener):
(WebCore::JSEventSource::removeEventListener):
* bindings/js/JSMessagePortCustom.cpp:
(WebCore::JSMessagePort::addEventListener):
(WebCore::JSMessagePort::removeEventListener):
* bindings/js/JSNodeCustom.cpp:
(WebCore::JSNode::addEventListener):
(WebCore::JSNode::removeEventListener):
* bindings/js/JSSVGElementInstanceCustom.cpp:
(WebCore::JSSVGElementInstance::addEventListener):
(WebCore::JSSVGElementInstance::removeEventListener):
* bindings/js/JSXMLHttpRequestCustom.cpp:
(WebCore::JSXMLHttpRequest::addEventListener):
(WebCore::JSXMLHttpRequest::removeEventListener):
* bindings/js/JSXMLHttpRequestUploadCustom.cpp:
(WebCore::JSXMLHttpRequestUpload::addEventListener):
(WebCore::JSXMLHttpRequestUpload::removeEventListener):
* bindings/js/JSWebSocketCustom.cpp:
(WebCore::JSWebSocket::addEventListener):
(WebCore::JSWebSocket::removeEventListener):

LayoutTests:

Test adds event listener to a DocumentType Node which is created without a document
and then dispatches the event after attaching a node to the tree. Event
should fire when node is attached to the tree.

* fast/events/add-event-without-document-expected.txt: Added.
* fast/events/add-event-without-document.html: Added.

Canonical link: https://commits.webkit.org/41017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49539 268f45cc-cd09-0410-ab3c-d52691b4dbfc