WebCore/bindings/js/JSWebSocketCustom.cpp
@@ -62,10 +62,6 @@ JSValue JSWebSocket::send(ExecState* exec, const ArgList& args)
 
 JSValue JSWebSocket::addEventListener(ExecState* exec, const ArgList& args)
 {
-    JSDOMGlobalObject* globalObject = toJSDOMGlobalObject(impl()->scriptExecutionContext());
-    if (!globalObject)
-        return jsUndefined();
-
     JSValue listener = args.at(1);
     if (!listener.isObject())
         return jsUndefined();
@@ -76,10 +72,6 @@ JSValue JSWebSocket::addEventListener(ExecState* exec, const ArgList& args)
 
 JSValue JSWebSocket::removeEventListener(ExecState* exec, const ArgList& args)
 {
-    JSDOMGlobalObject* globalObject = toJSDOMGlobalObject(impl()->scriptExecutionContext());
-    if (!globalObject)
-        return jsUndefined();
-
     JSValue listener = args.at(1);
     if (!listener.isObject())
         return jsUndefined();
